# smops

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
Formula/: sagemaker-ops-cli.rb
demo/: README.md  smops-demo.tape
examples/: processing-job.json
examples/aws/: config  credentials  mock.env
sagemaker_ops/: __init__.py  aws.py  cli.py  config.py  tui.py
tests/: conftest.py  test_e2e_moto.py
