[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sagemaker-ops-cli"
version = "0.1.0"
description = "CLI and TUI for submitting and monitoring Amazon SageMaker Processing Jobs and Pipelines."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.34.0",
    "botocore>=1.34.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
    "textual>=0.58.0",
]

[project.optional-dependencies]
yaml = ["PyYAML>=6.0.0"]
dev = [
    "build>=1.2.0",
    "moto[logs,sagemaker]>=5.0.0",
    "pytest>=8.0.0",
    "ruff>=0.5.0",
    "twine>=5.0.0",
]

[project.scripts]
smops = "sagemaker_ops.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["sagemaker_ops*"]


[tool.pytest.ini_options]
testpaths = ["tests"]
